# template-vue3-django-ninja

./: .gitignore  CHANGELOG.md  CI配置文档.md  README.md  WORKFLOW.md  docker-compose.yml  后端包管理.md  模板仓库构建要求.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci-check.yml  deploy.yml  pr-checklist.yml  (+1 more)
backend/: .coverage  .env.example  Dockerfile  gunicorn.conf.py  pyproject.toml  pytest.ini
backend/apps/users/: admin.py  api.py  models.py  schemas.py  services.py
backend/apps/users/migrations/: 0001_initial.py  0002_add_user_indexes.py
backend/apps/users/tests/: __init__.py  test_api.py  test_api_integration.py  test_cache_integration.py  test_services.py
backend/config/: asgi.py  middleware.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py
backend/core/: auth.py  cache.py  exceptions.py  pagination.py  ratelimit.py  response.py
backend/core/tests/: test_auth.py  test_cache.py  test_performance.py  test_ratelimit.py  test_response.py
backend/requirements/: base.txt  local.txt  production.txt
backend/scripts/: init-db.sql  init_superuser.py
backend/tests/: test_dependencies.py
backend/utils/: logger.py
docs/: 01-PRD.md  02-API-Spec.md  03-Deploy.md
frontend/: .env.example  .env.production  .eslintrc.cjs  .prettierrc  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
scripts/: setup-ci.sh  template-vue3-django-ninja.service
(+29 files in other folders)
